chore: misc cleanups to source code (#326)